--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,19 @@
+---
+
+import '../styles/global.css'; 
+
+
+---
 <!doctype html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" href="/src/styles/global.css">
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Portfolio Agus</title>
-	</head>
-	<body >
-		<slot />
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="generator" content={Astro.generator} />
+        <title>Portfolio Agus</title>
+    </head>
+    <body >
+        <slot />
+    </body>
 </html>
-
-
